--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -56,6 +56,7 @@ $secondary-text: #757575;
       font-size: 1.2rem;
       text-align: center;
       margin: 0.5rem 1.5rem;
+      padding-bottom: 0.3rem;
     }
 
     .card-text {
