Started mobile menu

--- a/src/scss/_showcaseCarousel.scss
+++ b/src/scss/_showcaseCarousel.scss
@@ -11,7 +11,7 @@ $black: #000;
   justify-content: center;
   text-align: center;
   width: 100%;
-  min-height: 10vh;
+  min-height: 200px;
   height: 20vh;
   background-color: rgba($primary-color, $alpha: 0.2);
   background-image: url('./img/car_main.jpg');
