--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -22,11 +22,13 @@ $secondary-text: #757575;
   li {
     text-align: left;
     overflow: hidden;
+    width: fit-content;
   }
   a {
     text-decoration: none;
     color: $primary-text;
     line-height: 2;
+    width: fit-content;
   }
   a:hover {
     border-bottom: 1px solid $primary-accent;
@@ -58,7 +60,7 @@ $secondary-text: #757575;
 }
 @media only screen and (max-width: 1250px) {
   .footer {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 0.5rem;
     a {
       font-size: 0.9rem;
