--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,11 +1,76 @@
+$primary-color: #0b132b;
+$primary-accent: #6fffe9;
+$primary-text: #fff;
+$secondary-text: #757575;
+$black: #000;
+$trans-speed-mid: ease 0.6s;
+
 .navbar {
   width: 100%;
   height: 4rem;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  z-index: 1;
   background-color: $primary-color;
   border-bottom: 5px solid $primary-accent;
   font-size: 1rem;
+
+  input[type='checkbox'] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 60px;
+    height: 90%;
+    opacity: 0;
+    display: none;
+  }
+
+  // input[type='checkbox']:checked + .hamburger div:nth-child(1) {
+  //   transform: rotate(135deg);
+  // }
+
+  input[type='checkbox']:checked + .hamburger div:nth-child(2) {
+    transform: rotate(-135deg);
+  }
+
+  // input[type='checkbox']:checked + .hamburger div:nth-child(3) {
+  //   transform: rotate(135deg);
+  // }
+
+  .hamburger {
+    position: absolute;
+    // top: 0;
+    // left: 0;
+    z-index: 1;
+    width: 60px;
+    height: 100%;
+    padding: 0.5rem;
+    background-color: rgba($secondary-text, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    display: none;
+
+    div {
+      // position: relative;
+      width: 100%;
+      height: 3px;
+      background-color: $primary-text;
+      margin: 4px 0;
+      transition: all $trans-speed-mid;
+    }
+
+    // div:hover {
+    //   transform: rotate(135deg);
+    // }
+  }
+
+  // .menu {
+  //   transition: 0.75s;
+  // }
 
   ul {
     display: flex;
