--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -78,3 +78,9 @@ body::-webkit-scrollbar-thumb {
     margin: 8vh 0 0 0;
   }
 }
+
+@media only screen and (max-height: 1000px) {
+  .content {
+    margin: 12vh 0 0 0;
+  }
+}
