--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -72,22 +72,35 @@ $trans-speed-mid: ease 0.6s;
     display: flex;
     flex-direction: row;
     list-style: none;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
     overflow: hidden;
   }
   li {
     text-align: left;
+    height: 100%;
+    display: flex;
+
+    img {
+      border: 1px solid red;
+      border-radius: 50px;
+      height: 2.5rem;
+      width: 2.5rem;
+      margin-right: 0.5rem;
+      background-color: $primary-text;
+    }
   }
   p {
     color: $primary-text;
     margin-right: 1rem;
     font-size: 1.2rem;
+    margin: 0.5rem 1.5rem 0 0;
   }
   a {
     text-decoration: none;
     color: $primary-text;
     margin-right: 1rem;
     line-height: 1.6;
+    margin-top: 0.5rem;
   }
   a:hover {
     border-bottom: 1px solid $primary-accent;
@@ -98,8 +111,8 @@ $trans-speed-mid: ease 0.6s;
   .navbar {
     font-size: 0.5rem;
 
-    li:first-of-type {
-      display: flex;
+    // li:first-of-type {
+    p {
       font-size: 1.1rem;
     }
 
