--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -35,7 +35,7 @@ $trans-speed-mid: ease 0.6s;
       border-bottom: 2px solid $primary-accent;
       font-size: 1.2rem;
       text-align: center;
-      margin: 0.5rem 1.5rem;
+      margin: 0.5rem 1.5rem 1rem 1.5rem;
       padding-bottom: 0.3rem;
     }
 
@@ -46,6 +46,41 @@ $trans-speed-mid: ease 0.6s;
       margin: 0.8rem 1rem;
       overflow: hidden;
       line-height: 1.5;
+    }
+
+    .card-bottom-text {
+      font-size: 1.2rem;
+      font-weight: 500;
+      text-align: center;
+      margin: 1rem 1.5rem;
+      padding-top: 0.3rem;
+      border-top: 2px solid $primary-text;
+    }
+
+    .inner-card-grid {
+      display: grid;
+      gap: 1rem;
+      grid-template-columns: 1fr 1fr 1fr;
+      text-align: center;
+      margin: 0.8rem 1rem;
+      padding: 0 0 0 1.5rem;
+      overflow: hidden;
+
+      .inner-card-grid-item {
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+
+        i {
+          color: $primary-accent;
+          font-size: 2.2rem;
+        }
+        p {
+          color: $primary-text;
+          font-size: 0.9rem;
+          margin: 0.5rem 0 0 0.5rem;
+        }
+      }
     }
   }
 }
@@ -62,20 +97,54 @@ $trans-speed-mid: ease 0.6s;
   }
 
   .card-title {
-    transform: scale(1.03);
     color: rgba($primary-accent, 0.5);
     transition: $trans-speed-mid;
-    font-weight: 700;
   }
 
   .card-text {
-    transform: scale(1.03);
     color: rgba($primary-text, 0.5);
     transition: $trans-speed-mid;
   }
+  .card-bottom-text {
+    color: rgba($primary-text, 0.5);
+    transition: $trans-speed-mid;
+  }
+
+  .inner-card-grid {
+    .inner-card-grid-item {
+      i {
+        color: rgba($primary-accent, 0.5);
+        transition: $trans-speed-mid;
+      }
+      p {
+        color: rgba($primary-text, 0.5);
+        transition: $trans-speed-mid;
+      }
+    }
+  }
 }
 
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 2200px) {
+  .main-grid {
+    .card {
+      .inner-card-grid {
+        gap: 0.9rem;
+        grid-template-columns: 1fr 1fr;
+
+        .inner-card-grid-item {
+          i {
+            font-size: 2rem;
+          }
+          p {
+            margin: 0.5rem 0 0 0.4rem;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1600px) {
   .main-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem;
@@ -97,5 +166,18 @@ $trans-speed-mid: ease 0.6s;
 @media only screen and (max-width: 700px) {
   .main-grid {
     grid-template-columns: 1fr;
+
+    .card {
+      .inner-card-grid {
+        gap: 0.9rem;
+        grid-template-columns: 1fr 1fr;
+
+        .inner-card-grid-item {
+          p {
+            font-size: 1rem;
+          }
+        }
+      }
+    }
   }
 }
