--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 @import '_showcaseCarousel';
 @import '_navbar';
-@import '_mainGrid';
+@import '_contentGrid';
 @import '_footer';
 
 $primary-color: #0b132b;
@@ -75,7 +75,7 @@ body::-webkit-scrollbar-thumb {
 
 @media only screen and (max-width: 700px) {
   .content {
-    margin: 8vh 0 0 0;
+    margin: 6vh 0 0 0;
   }
 }
 
