--- a/src/scss/_showcaseCarousel.scss
+++ b/src/scss/_showcaseCarousel.scss
@@ -43,6 +43,20 @@ $black: #000;
   }
 }
 
+@media only screen and (max-width: 1000px) {
+  .carousel {
+    .text-helper {
+      h1 {
+        font-size: 3rem;
+      }
+
+      p {
+        font-size: 1.75rem;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 700px) {
   .carousel {
     .text-helper {
