--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -181,3 +181,21 @@ $trans-speed-mid: ease 0.6s;
     }
   }
 }
+
+@media only screen and (max-width: 350px) {
+  .main-grid {
+    .card {
+      .inner-card-grid {
+        gap: 0.8rem;
+        margin: 0.8rem 0.3rem;
+        padding: 0 0 0 0.8rem;
+
+        .inner-card-grid-item {
+          p {
+            font-size: 0.9rem;
+          }
+        }
+      }
+    }
+  }
+}
