Further improved small and very small screen response

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -33,6 +33,12 @@ $secondary-text: #757575;
     overflow: hidden;
     width: fit-content;
   }
+  p {
+    text-decoration: none;
+    color: $primary-text;
+    line-height: 1.8;
+    width: fit-content;
+  }
   a {
     text-decoration: none;
     color: $primary-text;
