--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -22,12 +22,12 @@ $trans-speed-mid: ease 0.6s;
     overflow: hidden;
 
     .img-card-top {
-      // height: auto;
       min-height: 325px;
       max-height: 325px;
       object-fit: cover;
       width: 100%;
       border-bottom: 2px solid $primary-text;
+      position: relative;
     }
 
     .card-title {
@@ -85,7 +85,8 @@ $trans-speed-mid: ease 0.6s;
   }
 }
 
-.card:hover {
+.card:hover,
+.card:focus {
   transform: scale(1.03);
   transition: $trans-speed-mid;
   background-color: rgba($primary-color, 0.5);
