--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -3,130 +3,221 @@ $primary-accent: #6fffe9;
 $primary-text: #fff;
 $secondary-text: #757575;
 $black: #000;
+$trans-speed-fast: ease 0.4s;
 $trans-speed-mid: ease 0.6s;
 
 .navbar {
   width: 100%;
   height: 4rem;
-  position: fixed;
-  top: 0;
-  left: 0;
   z-index: 1;
   background-color: $primary-color;
   border-bottom: 5px solid $primary-accent;
   font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
 
-  input[type='checkbox'] {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 60px;
-    height: 90%;
-    opacity: 0;
-    display: none;
+  img {
+    border: 1px solid red;
+    border-radius: 50px;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0.5rem 1rem 0.5rem 2.5rem;
+    background-color: $primary-text;
   }
-
-  // input[type='checkbox']:checked + .hamburger div:nth-child(1) {
-  //   transform: rotate(135deg);
-  // }
-
-  input[type='checkbox']:checked + .hamburger div:nth-child(2) {
-    transform: rotate(-135deg);
+  p {
+    color: $primary-text;
+    margin: 1rem 0 0 0;
+    font-size: 1.2rem;
   }
-
-  // input[type='checkbox']:checked + .hamburger div:nth-child(3) {
-  //   transform: rotate(135deg);
-  // }
 
   .hamburger {
-    position: absolute;
-    // top: 0;
-    // left: 0;
     z-index: 1;
-    width: 60px;
-    height: 100%;
-    padding: 0.5rem;
-    background-color: rgba($secondary-text, 0.6);
+    // width: 3rem;
+    // height: 100%;
+    padding: 0 1rem 0 0;
+    margin: 0 1.4rem 0 0;
+    // background-color: rgba($secondary-text, 0.6);
     display: flex;
     flex-direction: column;
     justify-content: center;
     display: none;
+    overflow: hidden;
+
+    -webkit-user-select: none;
+    user-select: none;
+
+    ul {
+      display: flex;
+      height: 0px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 59px;
+      right: -130px;
+      margin: 0 0 0 0rem;
+      padding: 0.5rem 1rem;
+      opacity: 1;
+
+      background: transparent;
+      color: $primary-text;
+      list-style-type: none;
+      overflow: hidden;
+      -webkit-font-smoothing: antialiased;
+      /* Stops flickering of text in Safari */
+
+      transform-origin: 0% 0%;
+      transform: translate(-100%, 0);
+
+      transition: transform 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
+        background-color 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
+        // opacity 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
+          height 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
+
+      li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 5rem;
+        height: fit-content;
+        // height: 2.5rem;
+        margin: 0.5rem 0.5rem;
+        overflow: hidden;
+        text-align: center;
+        a {
+          font-size: 0.9rem;
+          text-decoration: none;
+          color: $primary-text;
+          overflow: hidden;
+          padding: 0.25rem 0;
+          margin: 0 0;
+        }
+        a:hover,
+        a:focus {
+          border-bottom: 1px solid $primary-accent;
+        }
+      }
+    }
+
+    input:checked ~ ul {
+      height: fit-content;
+      // opacity: 1;
+      background-color: $primary-color;
+      // transform: translate(-100%, 0);
+    }
+
+    input {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 25px;
+      z-index: 2;
+      cursor: pointer;
+      // width: 55px;
+      width: 60px;
+      height: 32px;
+      height: 3.7rem;
+      opacity: 0;
+      -webkit-touch-callout: none;
+    }
 
     div {
-      // position: relative;
-      width: 100%;
-      height: 3px;
-      background-color: $primary-text;
+      display: block;
+      width: 33px;
+      height: 4px;
+      position: relative;
+      border-radius: 6px;
+      background: $primary-text;
       margin: 4px 0;
-      transition: all $trans-speed-mid;
+      z-index: 1;
+      // transition: all $trans-speed-fast;
+      transform-origin: 4px 0px;
+      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+        opacity 0.55s ease;
+    }
+
+    div:first-of-type {
+      transform-origin: 0% 0%;
+    }
+    div:last-of-type {
+      transform-origin: 0% 100%;
     }
   }
 
-  // .menu {
-  //   transition: 0.75s;
-  // }
+  .hamburger input:checked ~ div {
+    opacity: 1;
+    transform: rotate(45deg) translate(1px, -3px);
+  }
 
-  ul {
+  // Hide middle div
+  .hamburger input:checked ~ div:nth-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  .hamburger input:checked ~ div:last-of-type {
+    transform: rotate(-45deg) translate(4px, -1px);
+  }
+
+  .desktop-menu-links {
+    margin-left: auto;
+    margin: 0.5rem 2.5rem 0 auto;
     display: flex;
     flex-direction: row;
     list-style: none;
-    padding-top: 0.5rem;
     overflow: hidden;
-  }
-  li {
-    text-align: left;
-    height: 100%;
-    display: flex;
 
-    img {
-      border: 1px solid red;
-      border-radius: 50px;
-      height: 2.5rem;
-      width: 2.5rem;
-      margin-right: 0.5rem;
-      background-color: $primary-text;
+    li {
+      text-align: left;
+      height: fit-content;
+      display: flex;
     }
-  }
-  p {
-    color: $primary-text;
-    margin-right: 1rem;
-    font-size: 1.2rem;
-    margin: 0.5rem 1.5rem 0 0;
-  }
-  a {
-    text-decoration: none;
-    color: $primary-text;
-    margin-right: 1rem;
-    line-height: 1.6;
-    margin-top: 0.5rem;
-  }
-  a:hover {
-    border-bottom: 1px solid $primary-accent;
+    a {
+      text-decoration: none;
+      color: $primary-text;
+      margin: 0 1rem 0 0;
+      padding: 0.5rem 0rem 0.2rem 0;
+    }
+    a:hover,
+    a:focus {
+      border-bottom: 1px solid $primary-accent;
+    }
   }
 }
 
 @media only screen and (max-width: 1000px) {
   .navbar {
-    ul {
-      li {
-        text-align: left;
+    .hamburger {
+      display: flex;
+    }
 
-        img {
-          display: flex;
-        }
-        p {
-          font-size: 1.2rem;
-        }
-        a {
-          text-decoration: none;
-          color: $primary-text;
-          margin-right: 0.2rem;
-          line-height: 2;
-          font-size: 0.9rem;
-          display: none;
-        }
+    p {
+      font-size: 1.2rem;
+      margin-right: auto;
+    }
+    .desktop-menu-links {
+      display: none;
+      flex-direction: column;
+      margin: 0 0 0 0;
+      padding: 1rem 0.5rem 0.3rem 0.5rem;
+      position: absolute;
+      top: 50px;
+      right: 0;
+      z-index: 3;
+      background-color: $primary-color;
+
+      li {
+        height: 2.5rem;
+        overflow: hidden;
+      }
+
+      a {
+        text-decoration: none;
+        color: $primary-text;
+        line-height: 1;
+        margin: 0.5rem 0.5rem;
+        font-size: 0.9rem;
+        overflow: hidden;
       }
     }
   }
