--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,6 +21,11 @@ $trans-speed-mid: ease 0.6s;
   font-size: 16px;
   overflow-x: hidden;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   width: 100vw;
 }
@@ -30,7 +35,7 @@ $trans-speed-mid: ease 0.6s;
   flex-direction: column;
   width: 100%;
   padding: 1rem 2rem;
-  margin: 5vh 0 1vh 0;
+  margin: 2vh 0 0 0;
 }
 
 .btn {
@@ -75,12 +80,6 @@ body::-webkit-scrollbar-thumb {
 
 @media only screen and (max-width: 700px) {
   .content {
-    margin: 4vh 0 0 0;
-  }
-}
-
-@media only screen and (max-height: 1000px) {
-  .content {
-    margin: 12vh 0 0 0;
+    margin: 1vh 0 0 0;
   }
 }
