--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -54,11 +54,10 @@ $trans-speed-mid: ease 0.6s;
       align-items: center;
       position: absolute;
       top: 59px;
-      right: -130px;
+      right: 0px;
       margin: 0 0 0 0rem;
       padding: 0.5rem 1rem;
       opacity: 1;
-
       background: transparent;
       color: $primary-text;
       list-style-type: none;
@@ -67,12 +66,10 @@ $trans-speed-mid: ease 0.6s;
       /* Stops flickering of text in Safari */
 
       transform-origin: 0% 0%;
-      transform: translate(-100%, 0);
+      transform: translate(0%, -100%);
 
-      transition: transform 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
-        background-color 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
-        // opacity 0.3s cubic-bezier(0.77, 0.2, 0.05, 1),
-          height 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
+      transition: transform 0.4s cubic-bezier(0.77, 0.2, 0.05, 1),
+        height 0.4s cubic-bezier(0.77, 0.2, 0.05, 1);
 
       li {
         display: flex;
@@ -101,9 +98,9 @@ $trans-speed-mid: ease 0.6s;
 
     input:checked ~ ul {
       height: fit-content;
-      // opacity: 1;
       background-color: $primary-color;
-      // transform: translate(-100%, 0);
+      border-bottom: 5px solid $primary-accent;
+      transform: none;
     }
 
     input {
