--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
-@import '_showcaseCarousel';
+@import '_banner';
 @import '_navbar';
 @import '_contentGrid';
 @import '_footer';
@@ -36,6 +36,20 @@ html {
   width: 100%;
   padding: 1rem 2rem;
   margin: 2vh 0 0 0;
+}
+
+.section-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+
+  border-bottom: 5px solid $primary-accent;
+  margin: 0 auto 1.6rem 0;
+  h3 {
+    font-size: 1.75rem;
+    font-weight: 700;
+  }
 }
 
 .btn {
