--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -44,7 +44,7 @@ $black: #000;
 }
 
 @media only screen and (max-width: 1000px) {
-  .carousel {
+  .banner {
     .text-helper {
       h1 {
         font-size: 3rem;
@@ -58,7 +58,7 @@ $black: #000;
 }
 
 @media only screen and (max-width: 700px) {
-  .carousel {
+  .banner {
     .text-helper {
       h1 {
         font-size: 1.8rem;
