--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -55,6 +55,19 @@ $trans-speed-mid: ease 0.6s;
       margin: 1rem 1.5rem;
       padding-top: 0.3rem;
       border-top: 2px solid $primary-text;
+
+      .previous-price {
+        font-size: inherit;
+        margin: 0 0.8rem 0 0;
+        font-style: italic;
+        text-decoration: line-through $primary-text solid;
+      }
+
+      .now {
+        font-size: inherit;
+        color: $primary-accent;
+        margin: 0 0.4rem 0 0;
+      }
     }
 
     .inner-card-grid {
