--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -43,9 +43,9 @@ html {
   flex-direction: row;
   justify-content: center;
   text-align: center;
-
   border-bottom: 5px solid $primary-accent;
-  margin: 0 auto 1.6rem 0;
+  margin: 1rem auto 1.6rem 0;
+
   h3 {
     font-size: 1.75rem;
     font-weight: 700;
