--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -37,6 +37,7 @@ $trans-speed-mid: ease 0.6s;
       text-align: center;
       margin: 0.5rem 1.5rem 1rem 1.5rem;
       padding-bottom: 0.3rem;
+      text-transform: capitalize;
     }
 
     .card-text {
@@ -83,6 +84,7 @@ $trans-speed-mid: ease 0.6s;
         display: flex;
         flex-direction: row;
         overflow: hidden;
+        text-transform: capitalize;
 
         i {
           color: $primary-accent;
