--- a/src/scss/_contentGrid.scss
+++ b/src/scss/_contentGrid.scss
@@ -6,11 +6,10 @@ $trans-speed-mid: ease 0.6s;
 
 .main-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
   overflow: hidden;
   padding-bottom: 1rem;
-  // grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 
   .card {
     background-color: $primary-color;
@@ -22,8 +21,9 @@ $trans-speed-mid: ease 0.6s;
     overflow: hidden;
 
     .img-card-top {
-      min-height: 325px;
-      max-height: 325px;
+      // min-height: 325px;
+      // max-height: 325px;
+      height: 325px;
       object-fit: cover;
       width: 100%;
       border-bottom: 2px solid $primary-text;
@@ -74,7 +74,7 @@ $trans-speed-mid: ease 0.6s;
     .inner-card-grid {
       display: grid;
       gap: 1rem;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr);
       text-align: center;
       margin: 0.8rem 1rem;
       padding: 0 0 0 1.5rem;
