--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -49,6 +49,7 @@ $trans-speed-mid: ease 0.6s;
     ul {
       display: flex;
       height: 0px;
+      width: 100%;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -57,7 +58,7 @@ $trans-speed-mid: ease 0.6s;
       right: 0px;
       margin: 0 0 0 0rem;
       padding: 0.5rem 1rem;
-      opacity: 1;
+      opacity: 0;
       background: transparent;
       color: $primary-text;
       list-style-type: none;
@@ -69,20 +70,19 @@ $trans-speed-mid: ease 0.6s;
       transform: translate(0%, -100%);
 
       transition: transform 0.4s cubic-bezier(0.77, 0.2, 0.05, 1),
-        height 0.4s cubic-bezier(0.77, 0.2, 0.05, 1);
+        height 0.4s cubic-bezier(0.77, 0.2, 0.05, 1),
+        opacity 0.7s cubic-bezier(0.77, 0.2, 0.05, 1);
 
       li {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 5rem;
         height: fit-content;
-        // height: 2.5rem;
         margin: 0.5rem 0.5rem;
         overflow: hidden;
         text-align: center;
         a {
-          font-size: 0.9rem;
+          font-size: 1rem;
           text-decoration: none;
           color: $primary-text;
           overflow: hidden;
@@ -98,6 +98,7 @@ $trans-speed-mid: ease 0.6s;
 
     input:checked ~ ul {
       height: fit-content;
+      opacity: 1;
       background-color: $primary-color;
       border-bottom: 5px solid $primary-accent;
       transform: none;
