--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -51,3 +51,49 @@
 .info-grid-item:last-child {
   background-color: $primary-color;
 }
+
+// Tablets/iPads
+@media only screen and (max-width: 1000px) {
+  .info-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(150px, 200px);
+    .info-grid-item {
+      .info-grid-item-content {
+        padding: 1rem;
+        h3 {
+          font-size: 1.4rem;
+        }
+        p {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+
+// Large mobile phones
+@media only screen and (max-width: 700px) {
+  .info-grid {
+    grid-template-columns: 0 1fr 1fr;
+    grid-auto-rows: minmax(150px, 200px);
+    .info-grid-item {
+      .info-grid-item-content {
+        padding: 0.5rem;
+        h3 {
+          font-size: 1.2rem;
+          margin: 0 auto 0.5rem 0;
+        }
+        p {
+          font-size: 0.8rem;
+          margin: 0 0 1rem 0;
+        }
+        .btn {
+          border: 2px solid;
+          border-radius: 6px;
+          padding: 0.4rem 0.5rem;
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
+}
