Compressed some images

--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -20,7 +20,7 @@ $black: #000;
   background-size: cover;
   color: $primary-text;
   padding: 1rem 1rem;
-  margin-bottom: 2rem;
+  margin: 0 0 1.8rem 0;
   overflow: hidden;
 
   .text-helper {
