Compressed all images

--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -87,10 +87,9 @@
           margin: 0 0 1rem 0;
         }
         .btn {
-          border: 2px solid;
+          border: px solid;
           border-radius: 6px;
           padding: 0.4rem 0.5rem;
-          font-size: 0.9rem;
         }
       }
     }
